<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bv.dev.aspanta.livecoininfo.MainActivity"
    android:animateLayoutChanges="true"
    >

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/text_empty"
        android:src="@mipmap/livecoin_logo" />

    <LinearLayout
        android:id="@+id/linlay_personal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/iv_header"
        android:onClick="ctgPersonalClick"
        >

        <ImageView
            android:id="@+id/iv_personal_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_personal"
            android:contentDescription="@string/text_empty"
            />

        <TextView
            android:id="@+id/tv_personal_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/text_personal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_personal_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@android:drawable/arrow_down_float"
            android:contentDescription="@string/text_empty"
            />

    </LinearLayout>

    <ScrollView
        android:id="@+id/sv_personal_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linlay_personal"
        >

        <LinearLayout
            android:id="@+id/linlay_sv_pers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:id="@+id/linlay_pers_usd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pers_usd_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_usd"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_pers_usd_val"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_0usd"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linlay_pers_btc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pers_btc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_bitcoin"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_pers_btc_val"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/text_0btc"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linlay_exchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/sv_personal_data"
        android:onClick="ctgExchangeClick"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_exchange_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/text_empty"
            android:src="@mipmap/ic_exchange" />

        <TextView
            android:id="@+id/tv_exchange_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/text_exchange"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_exchange_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/text_empty"
            android:src="@android:drawable/arrow_down_float" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlay_exchange_data"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linlay_exchange"
        >

        <LinearLayout
            android:id="@+id/linlay_spinners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            >

            <Spinner
                android:id="@+id/spinnerLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            >
        </ListView>

    </LinearLayout>

</RelativeLayout>
